src/snapshots/transmute__xml__tests__write_if.snap
---
source: src/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">add</ident>
      <ident id="ident:1">div</ident>
      <ident id="ident:2">eq</ident>
      <ident id="ident:3">ge</ident>
      <ident id="ident:4">gt</ident>
      <ident id="ident:5">le</ident>
      <ident id="ident:6">lt</ident>
      <ident id="ident:7">mul</ident>
      <ident id="ident:8">neg</ident>
      <ident id="ident:9">neq</ident>
      <ident id="ident:10">sub</ident>
      <ident id="ident:11">boolean</ident>
      <ident id="ident:12">number</ident>
      <ident id="ident:13">void</ident>
    </identifiers>
    <types>
      <type id="type:1">
        <number />
      </type>
      <type id="type:2">
        <boolean />
      </type>
      <type id="type:3">
        <void />
      </type>
    </types>
    <stmt id="stmt:4" line="1" column="1" start="0" len="48">
      <expr id="expr:10" type-ref="type:1" line="1" column="1" start="0" len="48">
        <if>
          <condition>
            <expr id="expr:0" type-ref="type:2" line="1" column="4" start="3" len="4">
              <bool>true</bool>
            </expr>
          </condition>
          <true>
            <expr id="expr:2" type-ref="type:1" line="1" column="9" start="8" len="7">
              <block>
                <stmt id="stmt:0" line="1" column="11" start="10" len="3">
                  <expr id="expr:1" type-ref="type:1" line="1" column="11" start="10" len="2">
                    <number>42</number>
                  </expr>
                </stmt>
              </block>
            </expr>
          </true>
          <false>
            <expr id="expr:9" type-ref="type:1" line="1" column="22" start="21" len="27">
              <block>
                <stmt id="stmt:3" line="1" column="22" start="21" len="27">
                  <expr id="expr:8" type-ref="type:1" line="1" column="22" start="21" len="27">
                    <if>
                      <condition>
                        <expr id="expr:3" type-ref="type:2" line="1" column="25" start="24" len="5">
                          <bool>false</bool>
                        </expr>
                      </condition>
                      <true>
                        <expr id="expr:5" type-ref="type:1" line="1" column="31" start="30" len="6">
                          <block>
                            <stmt id="stmt:1" line="1" column="33" start="32" len="2">
                              <expr id="expr:4" type-ref="type:1" line="1" column="33" start="32" len="1">
                                <number>0</number>
                              </expr>
                            </stmt>
                          </block>
                        </expr>
                      </true>
                      <false>
                        <expr id="expr:7" type-ref="type:1" line="1" column="43" start="42" len="6">
                          <block>
                            <stmt id="stmt:2" line="1" column="45" start="44" len="2">
                              <expr id="expr:6" type-ref="type:1" line="1" column="45" start="44" len="1">
                                <number>1</number>
                              </expr>
                            </stmt>
                          </block>
                        </expr>
                      </false>
                    </if>
                  </expr>
                </stmt>
              </block>
            </expr>
          </false>
        </if>
      </expr>
    </stmt>
  </ast>
</unit>
