src/snapshots/transmute__xml__tests__write_let.snap
---
source: src/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">ident</ident>
      <ident id="ident:1">add</ident>
      <ident id="ident:2">div</ident>
      <ident id="ident:3">eq</ident>
      <ident id="ident:4">ge</ident>
      <ident id="ident:5">gt</ident>
      <ident id="ident:6">le</ident>
      <ident id="ident:7">lt</ident>
      <ident id="ident:8">mul</ident>
      <ident id="ident:9">neg</ident>
      <ident id="ident:10">neq</ident>
      <ident id="ident:11">sub</ident>
      <ident id="ident:12">boolean</ident>
      <ident id="ident:13">number</ident>
      <ident id="ident:14">void</ident>
    </identifiers>
    <types>
      <type id="type:1">
        <number />
      </type>
      <type id="type:2">
        <boolean />
      </type>
      <type id="type:3">
        <void />
      </type>
    </types>
    <stmt id="stmt:0" line="1" column="1" start="0" len="15">
      <let>
        <identifier ident-ref="ident:0" line="1" column="5" start="4" len="5">ident</identifier>
        <expression line="1" column="13" start="12" len="2">
          <expr id="expr:0" type-ref="type:1" line="1" column="13" start="12" len="2">
            <number>42</number>
          </expr>
        </expression>
      </let>
    </stmt>
  </ast>
</unit>
