src/snapshots/transmute__xml__tests__write_let_fn.snap
---
source: src/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">f</ident>
      <ident id="ident:1">n</ident>
      <ident id="ident:2">number</ident>
      <ident id="ident:3">add</ident>
      <ident id="ident:4">div</ident>
      <ident id="ident:5">eq</ident>
      <ident id="ident:6">ge</ident>
      <ident id="ident:7">gt</ident>
      <ident id="ident:8">le</ident>
      <ident id="ident:9">lt</ident>
      <ident id="ident:10">mul</ident>
      <ident id="ident:11">neg</ident>
      <ident id="ident:12">neq</ident>
      <ident id="ident:13">sub</ident>
      <ident id="ident:14">boolean</ident>
      <ident id="ident:15">void</ident>
    </identifiers>
    <stmt id="stmt:1" line="1" column="1" start="0" len="33">
      <fn>
        <identifier ref="ident:0" line="1" column="5" start="4" len="1">f</identifier>
        <type ref="ident:2" line="1" column="19" start="18" len="6">number</type>
        <parameters>
          <parameter id="stmt:1:0" line="1" column="7" start="6" len="9">
            <name ref="ident:1" line="1" column="7" start="6" len="1">n</name>
            <type ref="ident:2" line="1" column="10" start="9" len="6">number</type>
          </parameter>
        </parameters>
        <body line="1" column="28" start="27" len="6">
          <expr id="expr:3" line="1" column="28" start="27" len="6">
            <block>
              <stmt id="stmt:0" line="1" column="28" start="27" len="6">
                <expr id="expr:2" line="1" column="28" start="27" len="5">
                  <call line="1" column="28" start="27" len="5" ident-ref="ident:10" name="mul" target-id="native:mul:number:number:number">
                    <parameters>
                      <parameter>
                        <expr id="expr:0" line="1" column="28" start="27" len="1">
                          <identifier-ref id="ident-ref:0" ident-ref="ident:1" target-id="stmt:1:0">n</identifier-ref>
                        </expr>
                      </parameter>
                      <parameter>
                        <expr id="expr:1" line="1" column="32" start="31" len="1">
                          <number>2</number>
                        </expr>
                      </parameter>
                    </parameters>
                  </call>
                </expr>
              </stmt>
            </block>
          </expr>
        </body>
      </fn>
    </stmt>
  </ast>
</unit>
