src/snapshots/transmute__xml__tests__write_while.snap
---
source: src/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">add</ident>
      <ident id="ident:1">div</ident>
      <ident id="ident:2">eq</ident>
      <ident id="ident:3">ge</ident>
      <ident id="ident:4">gt</ident>
      <ident id="ident:5">le</ident>
      <ident id="ident:6">lt</ident>
      <ident id="ident:7">mul</ident>
      <ident id="ident:8">neg</ident>
      <ident id="ident:9">neq</ident>
      <ident id="ident:10">sub</ident>
      <ident id="ident:11">boolean</ident>
      <ident id="ident:12">number</ident>
      <ident id="ident:13">void</ident>
    </identifiers>
    <types>
      <type id="type:1">
        <number />
      </type>
      <type id="type:2">
        <boolean />
      </type>
      <type id="type:3">
        <void />
      </type>
    </types>
    <stmt id="stmt:1" line="1" column="1" start="0" len="18">
      <expr id="expr:3" line="1" column="1" start="0" len="18">
        <while>
          <condition line="1" column="7" start="6" len="4">
            <expr id="expr:0" line="1" column="7" start="6" len="4">
              <bool>true</bool>
            </expr>
          </condition>
          <body>
            <expr id="expr:2" line="1" column="12" start="11" len="7">
              <block>
                <stmt id="stmt:0" line="1" column="14" start="13" len="3">
                  <expr id="expr:1" line="1" column="14" start="13" len="2">
                    <number>42</number>
                  </expr>
                </stmt>
              </block>
            </expr>
          </body>
        </while>
      </expr>
    </stmt>
  </ast>
</unit>
